collapse nav bar fixed

--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -5,3 +5,14 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   margin-left: 10px;
 }
+
+.collapseItemsView {
+  position: fixed;
+  top: 60px;
+  background-color: rgb(40, 40, 40);
+  padding: 30px;
+  color: white;
+
+  z-index: 10;
+
+}
